# yt-dlp-qt

./: pyproject.toml
yt_dlp_qt/: app.ui  main.py  uic.py
yt_dlp_qt/locales/: yt-dlp-qt.pot
yt_dlp_qt/locales/de_DE/LC_MESSAGES/: yt-dlp-qt.mo  yt-dlp-qt.po  yt-dlp-qt.pot
